--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 </h2>
 <p>© 2024 Akiru Kato</p>
 <p>Licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0.html" class="external-link">Apache License, Version 2.0</a>.</p>
-<p>Icons made by <a href="https://www.flaticon.com/authors/iconixar" class="external-link">iconixar</a> from <a href="https://www.flaticon.com/" class="external-link">www.flaticon.com</a>.</p>
+<p>Icons made by iconixar from flaticon.</p>
 </div>
 </div>
   </main><aside class="col-md-3"><div class="links">
